Edited index to final shape and contact too

--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-9 col-md-9 col-sm-9 probootstrap-top-quick-contact-info">
-              <span><i class="icon-location2"></i>Av. Jorn. Aníbal Fernandes, s/n-Cidade Universitária, Recife-PE</span>
-              <span><i class="icon-phone2"></i>+55 81 2126-8430</span>
-              <span><i class="icon-mail"></i>robocin@cin.ufpe.br</span>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 probootstrap-top-social">
               <ul>
@@ -52,8 +49,7 @@
                 <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
                 <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
                 <li><a href="#"><i class="icon-github"></i></a></li>
-                <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
-                <!--<li><a href="#"><i class="icon-youtube"></i></a></li>-->
+                <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home"><i class="icon-user"></i></a></li>
                 <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
               </ul>
             </div>
@@ -78,11 +74,8 @@
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="courses.html">Team</a></li>
-              <li><a href="teachers.html">Categories</a></li>
-              <li><a href="events.html">Events</a></li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Sobre nós</a></li>
                   <li><a href="courses.html">Courses</a></li>
@@ -102,8 +95,9 @@
                   <li><a href="news.html">News</a></li>
                 </ul>
               </li>
+              <li><a href="events.html">Publications</a></li>
+              <li><a href="courses.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home">Intranet</a></li>
             </ul>
           </div>
         </div>
@@ -111,7 +105,7 @@
 
       <section class="flexslider">
         <ul class="slides">
-          <li style="background-image: url(img/slider_1.jpg)" class="overlay">
+          <li style="background-image: url(img/slider_4.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -146,7 +140,7 @@
             </div>
 
           </li>
-          <li style="background-image: url(img/slider_4.jpg)" class="overlay">
+          <li style="background-image: url(img/slider_1.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -194,20 +188,20 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
+            <div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
               <div class="probootstrap-counter-wrap">
                 <div class="probootstrap-icon">
                   <i class="icon-users2"></i>
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="18" data-speed="2000" data-refresh-interval="50">1</span>
+                    <span class="js-counter" data-from="0" data-to="19" data-speed="2000" data-refresh-interval="50">1</span>
                   </span>
                   <span class="probootstrap-counter-label">Students Involved</span>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
+            <div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
               <div class="probootstrap-counter-wrap">
                 <div class="probootstrap-icon">
                   <i class="icon-user-tie"></i>
@@ -221,136 +215,39 @@
               </div>
             </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
-            <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
+            <div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
               <div class="probootstrap-counter-wrap">
                 <div class="probootstrap-icon">
                   <i class="icon-hour-glass"></i>
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50">1</span> Years
+                    <span class="js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50">1</span> Years
                   </span>
                   <span class="probootstrap-counter-label">Source</span>
                 </div>
               </div>
             </div>
-            <!--<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
+            <div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
 
                <div class="probootstrap-counter-wrap">
                 <div class="probootstrap-icon">
-                  <i class="icon-smile2"></i>
+                  <i class="icon-cog"></i>
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50">1</span>%
+                    <span class="js-counter" data-from="0" data-to="1" data-speed="1000" data-refresh-interval="50">1</span>
                   </span>
-                  <span class="probootstrap-counter-label">Parents Satisfaction</span>
+                  <span class="probootstrap-counter-label">Categories</span>
                 </div>
               </div>
             </div>
           </div>
-        -->
+
         </div>
       </section>
 
-      <section class="probootstrap-section probootstrap-section-colored probootstrap-bg probootstrap-custom-heading probootstrap-tab-section" style="background-image: url(img/img_robo.jpg)">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 text-center section-heading probootstrap-animate">
-              <h2 class="mb0">Upcoming Events</h2>
-            </div>
-          </div>
-        </div>
-        <!--
-        <div class="probootstrap-tab-style-1">
-          <ul class="nav nav-tabs probootstrap-center probootstrap-tabs no-border">
-            <li class="active"><a data-toggle="tab" href="#featured-news">Featured News</a></li>
-            <li><a data-toggle="tab" href="#upcoming-events">Upcoming Events</a></li>
-          </ul>
-        </div>
-      -->
-      </section>
 
-      <section class="probootstrap-section probootstrap-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-
-              <div class="tab-content">
-                <div id="featured-news" class="tab-pane fade in active">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="owl-carousel" id="owl1">
-                        <div class="item">
-                          <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_new1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
-                            <div class="probootstrap-text">
-                              <h3>LARC 2018</h3>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>October 9, 2017</span>
-                              <span class="probootstrap-location"><i class="icon-location2"></i>João Pessoa,PB,Brazil</span>
-                            </div>
-                          </a>
-                        </div>
-                        <!--
-                        <div class="item">
-                          <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
-                            <div class="probootstrap-text">
-                              <h3>Tempora consectetur unde nisi</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, earum.</p>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-
-
-                            </div>
-                          </a>
-                        </div>
-                      -->
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-                <!--
-                <div id="upcoming-events" class="tab-pane fade in active">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="owl-carousel" id="owl2">
-                        <div class="item">
-                          <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_new1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
-                            <div class="probootstrap-text">
-                              <h3>LARC 2018</h3>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>October 9, 2017</span>
-                              <span class="probootstrap-location"><i class="icon-location2"></i>João Pessoa,PB,Brazil</span>
-                            </div>
-                          </a>
-                        </div>
-                      -->
-                        <!-- END item -->
-                        <!--
-                        <div class="item">
-                          <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
-                            <div class="probootstrap-text">
-                              <h3>Tempora consectetur unde nisi</h3>
-                              <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                              <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-                            </div>
-                          </a>
-                        </div>
-                        -->
-                        <!-- END item -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </section>
 
           <!-- END row -->
 
@@ -419,11 +316,11 @@
               <div class="probootstrap-footer-widget">
                 <h3>Links</h3>
                 <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Courses</a></li>
-                  <li><a href="#">Teachers</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="#" >Categories</a></li>
+                  <li><a href="events.html">Publications</a></li>
+                  <li><a href="courses.html">Team</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
