--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,6 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-9 col-md-9 col-sm-9 probootstrap-top-quick-contact-info">
-              <span><i class="icon-location2"></i>Av. Jorn. Aníbal Fernandes, s/n-Cidade Universitária, Recife-PE</span>
-              <span><i class="icon-phone2"></i>+55 81 2126-8430</span>
-              <span><i class="icon-mail"></i>robocin@cin.ufpe.br</span>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 probootstrap-top-social">
               <ul>
@@ -52,6 +49,7 @@
                 <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
                 <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
                 <li><a href="#"><i class="icon-github"></i></a></li>
+                <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home"><i class="icon-user"></i></a></li>
                 <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
               </ul>
             </div>
@@ -76,11 +74,8 @@
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="courses.html">Team</a></li>
-              <li><a href="teachers.html">Categories</a></li>
-              <li><a href="events.html">Events</a></li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Sobre nós</a></li>
                   <li><a href="courses.html">Courses</a></li>
@@ -100,8 +95,9 @@
                   <li><a href="news.html">News</a></li>
                 </ul>
               </li>
+              <li><a href="events.html">Publications</a></li>
+              <li><a href="courses.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home">Intranet</a></li>
             </ul>
           </div>
         </div>
@@ -125,20 +121,6 @@
           <div class="row">
             <div class="col-md-12">
               <div class="row probootstrap-gutter0">
-                <div class="col-md-4" id="probootstrap-sidebar">
-                  <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                    <h3>Pages</h3>
-                    <ul class="probootstrap-side-menu">
-
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="courses.html">Courses</a></li>
-                      <li><a href="teachers.html">Teachers</a></li>
-                      <li><a href="events.html">Events</a></li>
-                      <li><a href="about.html">About Us</a></li>
-                      <li class="active"><a>Contact Us</a></li>
-                    </ul>
-                  </div>
-                </div>
                 <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                   <h2>Get In Touch</h2>
                   <p>Contact us using the form below.</p>
@@ -190,11 +172,11 @@
               <div class="probootstrap-footer-widget">
                 <h3>Links</h3>
                 <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Courses</a></li>
-                  <li><a href="#">Teachers</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="#" >Categories</a></li>
+                  <li><a href="events.html">Publications</a></li>
+                  <li><a href="courses.html">Team</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
