--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </ul>
               </li>
               <li><a href="events.html">Publications</a></li>
-              <li><a href="courses.html">Team</a></li>
+              <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
@@ -319,7 +319,7 @@
                   <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="#" >Categories</a></li>
                   <li><a href="events.html">Publications</a></li>
-                  <li><a href="courses.html">Team</a></li>
+                  <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
