--- a/team.html
+++ b/team.html
@@ -103,11 +103,11 @@
               </div>
             </nav>
 
-      <section class="probootstrap-section probootstrap-section-colored">
+      <section class="probootstrap-section probootstrap-section-colored"  >
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
-              <h1>Team</h1>
+              <h1 >Team</h1>
             </div>
           </div>
         </div>
@@ -119,9 +119,9 @@
 
         <div class="container">
 
-          <div class="row">
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
+          <div class="row probootstrap-flex-block">
+            <div class="col-md-4 col-sm-6 ">
+              <div class="probootstrap-teacher text-center probootstrap-animate ">
                 <figure class="media">
                   <img src="img/edna.jpeg" alt="" class="img-responsive">
                 </figure>
@@ -157,11 +157,10 @@
 
 
         </div>
-      </section>
 
-      <section class="probootstrap-section">
-        <div class="container">
-
+          <p></p>
+          <p></p>
+          <p></p>
           <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
@@ -218,6 +217,7 @@
                 </div>
               </div>
             </div>
+          </div>
 
           <div class="row">
             <div class="col-md-4 col-sm-6">
@@ -241,11 +241,12 @@
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_5.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/joaogabriel.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
                   <h3>João Gabriel</h3>
-                  <p>English Teacher</p>
+                  <p>MSc Student in Computer Science</p>
+                  <p>Robot Team | VSS</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -259,11 +260,12 @@
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_6.jpg" alt="" class="img-responsive">
+                  <img src="img/raphael.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Linda Reyez</h3>
-                  <p>Math Teacher</p>
+                  <h3>Raphael Brito</h3>
+                  <p>MSc Student in Computer Science</p>
+                  <p>Robot Team | VSS</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -275,15 +277,18 @@
             </div>
           </div>
 
+          <p></p>
+          <p></p>
           <div class="row">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/roberto.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Chris Worth</h3>
-                  <p>Physical Education</p>
+                  <h3>Roberto Fernandes</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Strategy Manager | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -293,14 +298,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_5.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/renato.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Janet Morris</h3>
-                  <p>English Teacher</p>
+                  <h3>Renato Sousa</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Strategy Team | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -311,31 +317,15 @@
               </div>
             </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_6.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/cristiano.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Linda Reyez</h3>
-                  <p>Math Teacher</p>
-                  <ul class="probootstrap-footer-social">
-                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/person_7.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Jessa Sy</h3>
-                  <p>Physics Teacher</p>
+                  <h3>Cristiano Oliveira</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Strategy Team | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
