--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RobôCIn &mdash; equipe de robótica do Centro de Informática da UFPE</title>
-    <meta name="description" content="equipe de robótica do Centro de Informática da UFPE">
+    <title>RobôCIn | Robotics Team</title>
+    <meta name="description" content="Robotics Team of UFPE">
     <meta name="keywords" content="robot,robótica,larc,fira,obr,cin,ufpe,robocup">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
@@ -77,11 +77,12 @@
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
-                  <li><a href="about.html">Sobre nós</a></li>
+                  <li><a href="about.html">Very Small Size</a></li>
+                  <!--
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="course-single.html">Course Single</a></li>
                   <li><a href="gallery.html">Gallery</a></li>
-                    <!--
+
                   <li class="dropdown-submenu dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
                     <ul class="dropdown-menu">
