--- a/team.html
+++ b/team.html
@@ -11,9 +11,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ProBootstrap:Enlight &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
-    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <title>RobôCIn | Robotics Team</title>
+    <meta name="description" content="Robotics Team of UFPE">
+    <meta name="keywords" content="robot,robótica,larc,fira,obr,cin,ufpe,robocup">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -338,14 +338,15 @@
           </div>
 
           <div class="row">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
                   <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Chris Worth</h3>
-                  <p>Physical Education</p>
+                  <h3>Chri</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Strategy Team | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
