--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RobôCIn &mdash; equipe de robótica do Centro de Informática da UFPE</title>
-    <meta name="description" content="equipe de robótica do Centro de Informática da UFPE">
+    <title>RobôCIn | Robotics Team</title>
+    <meta name="description" content="Robotics Team of UFPE">
     <meta name="keywords" content="robot,robótica,larc,fira,obr,cin,ufpe,robocup">
-
+    <link rel="icon" href="img/cininho.png" width=100% >
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
