--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
     <title>RobôCIn | Robotics Team</title>
     <meta name="description" content="Robotics Team of UFPE">
     <meta name="keywords" content="robot,robótica,larc,fira,obr,cin,ufpe,robocup">
-
+    <link rel="icon" href="img/cininho.png" width=100% >
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.css">
