--- a/team.html
+++ b/team.html
@@ -165,6 +165,29 @@
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
+                  <img src="img/bandeira.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Gabriel Bandeira</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Team Manager | VSS <p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix visible-sm-block visible-xs-block"></div>
+          </div>
+          <p></p>
+          <p></p>
+          <div class="row">
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
                   <img src="img/lucas.jpeg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
@@ -341,10 +364,10 @@
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/andreluis.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Chri</h3>
+                  <h3>André Luís</h3>
                   <p>Undergraduate Computer Engineering</p>
                   <p>Strategy Team | VSS <p>
                   <ul class="probootstrap-footer-social">
@@ -356,14 +379,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_5.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/esdras.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Janet Morris</h3>
-                  <p>English Teacher</p>
+                  <h3>Esdras Júnior</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Strategy Team | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -374,14 +398,20 @@
               </div>
             </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
-            <div class="col-md-3 col-sm-6">
+
+          </div>
+          <p></p>
+          <p></p>
+          <div class="row">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_6.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/rapela.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Linda Reyez</h3>
-                  <p>Math Teacher</p>
+                  <h3>Heitor Rapela</h3>
+                  <p>MSc Student in Computer Science</p>
+                  <p>Vision Manager | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -391,14 +421,34 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_7.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/carlos.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Jessa Sy</h3>
-                  <p>Physics Teacher</p>
+                  <h3>Carlos Pena</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Vision Team | VSS <p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix visible-sm-block visible-xs-block"></div>
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/juniorlima.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Júnior Lima</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Vision Team | VSS <p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -410,6 +460,45 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/matheusgonca.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Mateus Gonçalves</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Vision Team | VSS <p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/maggi.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Lucas Maggi</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Vision Team | VSS <p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix visible-sm-block visible-xs-block"></div>
+          </div>
         </div>
       </section>
 
