--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                       <li><a href="#">Second Level Menu</a></li>
                       <li><a href="#">Second Level Menu</a></li>
                     </ul>
-                  -->
                   </li>
                   <li><a href="news.html">News</a></li>
+                    -->
                 </ul>
               </li>
-              <li><a href="events.html">Publications</a></li>
+              <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
