--- a/publications.html
+++ b/publications.html
@@ -73,11 +73,11 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
-                  <li><a href="vsss.html">Very Small Size</a></li>
+                  <li><a href="about.html">Very Small Size</a></li>
                   <!--
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="course-single.html">Course Single</a></li>
@@ -96,7 +96,7 @@
                     -->
                 </ul>
               </li>
-              <li><a href="publications.html">Publications</a></li>
+              <li><a href="publications.html" class="active">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -104,54 +104,34 @@
         </div>
       </nav>
 
-
       <section class="probootstrap-section probootstrap-section-colored">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
-              <h1 class="mb0">Contact Us</h1>
+              <h1>Publications</h1>
             </div>
           </div>
         </div>
       </section>
 
-
-
-      <section class="probootstrap-section probootstrap-section-sm">
+      <section class="probootstrap-section">
         <div class="container">
           <div class="row">
-            <div class="col-md-12">
-              <div class="row probootstrap-gutter0">
-                <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                  <h2>Get In Touch</h2>
-                  <p>Contact us using the form below.</p>
-                  <form action="https://formspree.io/robocin@cin.ufpe.br" method="post" class="probootstrap-form">
-                    <div class="form-group">
-                      <label for="name">Full Name</label>
-                      <input type="text" class="form-control" id="name" name="name">
-                    </div>
-                    <div class="form-group">
-                      <label for="email">Email</label>
-                      <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    <div class="form-group">
-                      <label for="subject">Subject</label>
-                      <input type="text" class="form-control" id="subject" name="subject">
-                    </div>
-                    <div class="form-group">
-                      <label for="message">Message</label>
-                      <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
-                    </div>
-                    <div class="form-group">
-                      <input type="submit" class="btn btn-primary btn-lg" id="submit" name="submit" value="Send Message">
-                    </div>
-                  </form>
+            <div style="width:350%;">
+              <div class="probootstrap-flex-block">
+                <div class="probootstrap-text probootstrap-animate">
+                <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
+                  <h3>Team Description Papers</h3>
+                  <p> 1. <a href="archives/tdpVss2017.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2017 </p>
+                  <p> 2. <a href="archives/tdpVss2016.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2016 </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+
 
 
       <footer class="probootstrap-footer probootstrap-bg">
