--- a/team.html
+++ b/team.html
@@ -73,15 +73,16 @@
 
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li class="dropdown">
                       <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                       <ul class="dropdown-menu">
-                        <li><a href="about.html">Sobre nós</a></li>
+                        <li><a href="about.html">Very Small Size</a></li>
+                        <!--
                         <li><a href="courses.html">Courses</a></li>
                         <li><a href="course-single.html">Course Single</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                          <!--
+
                         <li class="dropdown-submenu dropdown">
                           <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
                           <ul class="dropdown-menu">
@@ -90,13 +91,13 @@
                             <li><a href="#">Second Level Menu</a></li>
                             <li><a href="#">Second Level Menu</a></li>
                           </ul>
-                        -->
                         </li>
                         <li><a href="news.html">News</a></li>
+                          -->
                       </ul>
                     </li>
-                    <li><a href="events.html">Publications</a></li>
-                    <li><a href="team.html" class="active">Team</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="team.html">Team</a></li>
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
                 </div>
