--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
-                  <li><a href="about.html">Very Small Size</a></li>
+                  <li><a href="vsss.html">Very Small Size</a></li>
                   <!--
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="course-single.html">Course Single</a></li>
