--- a/team.html
+++ b/team.html
@@ -156,13 +156,48 @@
               </div>
             </div>
 
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/joaogabriel.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>João Gabriel</h3>
+                  <p>MSc Student in Computer Science</p>
+                  <p> </p>
+                  <p> </p>
+                  <p>Robot Team | VSS</p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="row">
+            <div class="clearfix visible-sm-block visible-xs-block"></div>
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/raphael.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Raphael Brito</h3>
+                  <p>MSc Student in Computer Science</p>
+                  <p>Robot Team | VSS</p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
 
-        </div>
-
-          <p></p>
-          <p></p>
-          <p></p>
-          <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -182,28 +217,28 @@
               </div>
             </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
-          </div>
-          <p></p>
-          <p></p>
-          <div class="row">
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/lucas.jpeg" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Lucas Cavalcanti</h3>
-                  <p>Undergraduate Computer Engineering</p>
-                  <p>Robot Manager | VSS <p>
-                  <ul class="probootstrap-footer-social">
-                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+
+              <div class="col-md-4 col-sm-6">
+                <div class="probootstrap-teacher text-center probootstrap-animate">
+                  <figure class="media">
+                    <img src="img/lucas.jpg" alt="" class="img-responsive">
+                  </figure>
+                  <div class="text">
+                    <h3>Lucas Cavalcanti</h3>
+                    <p>Undergraduate Computer Engineering</p>
+                    <p>Robot Manager | VSS <p>
+                    <ul class="probootstrap-footer-social">
+                      <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                      <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                      <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                      <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-            </div>
+          </div>
+
+          <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -241,9 +276,7 @@
                 </div>
               </div>
             </div>
-          </div>
 
-          <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -262,48 +295,27 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/joaogabriel.jpg" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>João Gabriel</h3>
-                  <p>MSc Student in Computer Science</p>
-                  <p>Robot Team | VSS</p>
-                  <ul class="probootstrap-footer-social">
-                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="clearfix visible-sm-block visible-xs-block"></div>
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/raphael.jpg" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Raphael Brito</h3>
-                  <p>MSc Student in Computer Science</p>
-                  <p>Robot Team | VSS</p>
-                  <ul class="probootstrap-footer-social">
-                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
           </div>
 
-          <p></p>
-          <p></p>
           <div class="row">
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/vinicius.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Vinicius Bezerra</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                  <p>Robot Team | VSS <p>
+                  <ul class="probootstrap-footer-social">
+                    <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
+                    <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
+                    <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -341,6 +353,9 @@
               </div>
             </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
+          </div>
+
+          <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -359,9 +374,6 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -401,8 +413,6 @@
             <div class="clearfix visible-sm-block visible-xs-block"></div>
 
           </div>
-          <p></p>
-          <p></p>
           <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
