--- a/index.html
+++ b/index.html
@@ -267,21 +267,23 @@
 
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="img/lucas.jpg" alt="">
                     </figure>
-                    <blockquote class="quote">&ldquo;Design must be functional and functionality must be translated into visual aesthetics, without any reliance on gimmicks that have to be explained.&rdquo; <cite class="author"> &mdash; <span>Mike Fisher</span></cite></blockquote>
+                    <blockquote class="quote">&ldquo;That's Life! We think, we design, we create, we move the world. &rdquo; <cite class="author"> &mdash; <span> Lucas Cavalcanti</span></cite></blockquote>
                   </div>
 
                 </div>
                 <div class="item">
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="img/person_2.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="img/rapela.jpg" alt="">
                     </figure>
-                    <blockquote class="quote">&ldquo;Creativity is just connecting things. When you ask creative people how they did something, they feel a little guilty because they didn’t really do it, they just saw something. It seemed obvious to them after a while.&rdquo; <cite class="author"> &mdash;<span>Jorge Smith</span></cite></blockquote>
+                    <blockquote class="quote">&ldquo;For those who like to learn and see cool things happen is a great experience!&rdquo; <cite class="author"> &mdash;<span>Heitor Rapela</span></cite></blockquote>
                   </div>
                 </div>
-                <div class="item">
+				  
+                <!--
+			  	<div class="item">
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
                       <img src="img/person_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
@@ -289,7 +291,8 @@
                     <blockquote class="quote">&ldquo;I think design would be better if designers were much more skeptical about its applications. If you believe in the potency of your craft, where you choose to dole it out is not something to take lightly.&rdquo; <cite class="author">&mdash; <span>Brandon White</span></cite></blockquote>
                   </div>
                 </div>
-
+				-->
+				  
               </div>
             </div>
           </div>
