--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                   <div class="probootstrap-slider-text text-center">
-                    <h1 class="probootstrap-heading probootstrap-animate">Education is Life</h1>
+                    <h1 class="probootstrap-heading probootstrap-animate"> Building the Future with Robotics</h1>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                   <div class="probootstrap-slider-text text-center">
-                    <h1 class="probootstrap-heading probootstrap-animate">Helping Each of Our Students Fulfill the Potential</h1>
+                    <h1 class="probootstrap-heading probootstrap-animate">Engage in New Areas</h1>
                   </div>
                 </div>
               </div>
@@ -146,7 +146,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                   <div class="probootstrap-slider-text text-center">
-                    <h1 class="probootstrap-heading probootstrap-animate">Helping Each of Our Students Fulfill the Potential</h1>
+                    <h1 class="probootstrap-heading probootstrap-animate">Education for Life</h1>
                   </div>
                 </div>
               </div>
